# rakuda_ros

./: README.md
face_detection/: CMakeLists.txt  README.md  package.xml  setup.py
face_detection/face_detection/: __init__.py  face_detector_node.py  yolo_face_node.py  yolo_face_node_tf.py
face_detection/launch/: demo.py  face.launch.py
face_detection/resource/: face_detection
rakuda_bringup/: package.xml  setup.cfg  setup.py
rakuda_bringup/config/motions/: rakuda_motions.yaml
rakuda_bringup/launch/: bringup.launch.py  bringup_launch.py  play_motion2.launch.py  show_moveit.launch.py
rakuda_bringup/rakuda_bringup/: get_joint_positions.py
rakuda_control/: CMakeLists.txt  README.md  package.xml  rakuda_hardware.xml
rakuda_control/config/: rakuda_controllers.yaml
rakuda_control/launch/: control.launch.py
rakuda_control/src/: rakuda_hardware.cpp
rakuda_examples/: README.md
rakuda_head_action/: CMakeLists.txt  package.xml
rakuda_head_action/config/: rakuda_head_action.yaml  rakuda_head_action_params.yaml
rakuda_head_action/launch/: head_action_launch.py  rakuda_head_action_launch.py
rakuda_head_action/scripts/: look_at_link.py  teleop.py
rakuda_head_action/src/: head_action_node.cpp  rakuda_head_action_node.cpp
rakuda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rakuda_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  rakuda.srdf  ros2_controllers.yaml  sensors_3d.yaml
rakuda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rakuda_tools/: package.xml  setup.cfg  setup.py
rakuda_tools/arduino/: mouth.ino
rakuda_tools/config/: initial_position.yaml
rakuda_tools/linux/: 99-ESP32_LCD.rules  99-dxl_u2d2.rules  install_respeaker.sh  readme.txt
rakuda_tools/rakuda_tools/: dxl_led.py  dxl_torque_all.py  head_gimbal_keyboard.py  head_motion_filter.py  look_at_link_target.py  mouth_publisher.py  point_head_action_server.py  pose_player.py  torque_arms_off.py  torque_arms_on.py  torque_except.py
rakuda_vision/: CMakeLists.txt  README.md  package.xml
rakuda_vision/launch/: chest_camera.launch.py  head_camera.launch.py  head_camera_335.launch.py  head_camera_d435.launch.py  test_head_camera.launch.py
