<?xml version="1.0"?>
<package format="3">
  <name>face_detection</name>
  <version>0.0.1</version>
  <description>Face detection node for ROS 2 Humble using OpenCV DNN</description>

  <maintainer email="andrea.gavazzi@me.com">Andrea Gavazzi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  

</package>
